fix: Fixed various issues related to spacing for Register modal

--- a/src/style/components/_forms.scss
+++ b/src/style/components/_forms.scss
@@ -30,27 +30,21 @@ form.mdm--form {
   }
   .mdm--form-button {
     border-radius: 5px;
-    width: 400px;
-    @include respond-to($mobile) {
-      width: 100%;
-    }
+    width: 100%;
   }
 }
 
 /* Forms inside modal window */
 form.mdm--form.mdm--form-modal {
   width: 600px;
-  padding: 32px 100px;
+  padding: 24px 80px;
   @include respond-to($mobile) {
     width: 100%;
     padding: 12px 16px;
   }
 
   .mdm--form-input{
-    width: 400px;
-    @include respond-to($mobile) {
-      width: 100%;
-    }
+    width: 100%;
   }
   .mat-form-field-infix {
     @include respond-to($mobile) {
@@ -81,8 +75,10 @@ form.mdm--form.mdm--form-modal {
   width: initial;
 }
 /* Mat design reset */
-.mat-form-field-appearance-outline .mat-form-field-wrapper {
-  // margin: 0!important;
+.register-modal {
+    .mat-form-field-appearance-outline .mat-form-field-wrapper {
+      margin: 0!important;
+    }
 }
 
 .outlined-input {
